Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/grpc-getting-started.adoc.po
@@ -28,23 +28,23 @@ msgstr "gRPCを始めるには"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:12
 msgid "This page explains how to start using gRPC in your Quarkus application.  While this page describes how to configure it with Maven, it is also possible to use Gradle."
-msgstr ""
+msgstr "このページでは、QuarkusアプリケーションでgRPCを使い始める方法を説明します。このページではMavenでの設定方法を説明していますが、Gradleを使用することも可能です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:15
 msgid "Let's imagine you have a regular Quarkus project, generated from the https://code.quarkus.io[Quarkus project generator].  The default configuration is enough, but you can also select some extensions if you want."
-msgstr ""
+msgstr "ここでは、 link:https://code.quarkus.io[Quarkusプロジェクトジェネレータ] から生成された通常のQuarkusプロジェクトを想像してみましょう。デフォルトの設定で十分ですが、必要に応じていくつかのエクステンションを選択することもできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:16
 #, no-wrap
 msgid "Configuring your project"
-msgstr ""
+msgstr "プロジェクトの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:19
 msgid "Edit the `pom.xml` file to add the Quarkus gRPC extension dependency (just under `<dependencies>`):"
-msgstr ""
+msgstr "`pom.xml` ファイルを編集して、Quarkus gRPCエクステンションの依存関係を追加します( `<dependencies>` のすぐ下)。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:26
@@ -59,7 +59,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:30
 msgid "Make sure you have `generate-code` goal of `quarkus-maven-plugin` enabled in your `pom.xml`.  If you wish to generate code from different `proto` files for tests, also add the `generate-code-tests` goal:"
-msgstr ""
+msgstr "`pom.xml` で `generate-code` ゴールの `quarkus-maven-plugin` が有効になっていることを確認してください。テスト用に異なる `proto` ファイルからコードを生成したい場合は、 `generate-code-tests` ゴールも追加してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:52
@@ -89,17 +89,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:56
 msgid "With this configuration, you can put your service and message definitions in the `src/main/proto` directory.  `quarkus-maven-plugin` will generate Java files from your `proto` files."
-msgstr ""
+msgstr "この設定では、サービスとメッセージの定義を `src/main/proto` ディレクトリーに置くことができます。 `quarkus-maven-plugin` は、 `proto` ファイルから Java ファイルを生成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:58
 msgid "Alternatively to using the `generate-code` goal of the `quarkus-maven-plugin`, you can use `protobuf-maven-plugin` to generate these files, more in <<Generating Java files from proto with protobuf-maven-plugin>>"
-msgstr ""
+msgstr "`quarkus-maven-plugin` の `generate-code` ゴールを使用する代わりに、 `protobuf-maven-plugin` を使用してこれらのファイルを生成することができます。詳細は <<protoファイルからprotobuf-maven-pluginでJavaファイルを生成する>> を参照してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:61
 msgid "Let's start with a simple _Hello_ service.  Create the `src/main/proto/helloworld.proto` file with the following content:"
-msgstr ""
+msgstr "まずは簡単な _Hello_ サービスから始めてみましょう。 `src/main/proto/helloworld.proto` ファイルを以下の内容で作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:65
@@ -156,12 +156,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:90
 msgid "This `proto` file defines a simple service interface with a single method (`SayHello`), and the exchanged messages (`HelloRequest` containing the name and `HelloReply` containing the greeting message)."
-msgstr ""
+msgstr "この `proto` ファイルは、単一のメソッド ( `SayHello` ) と交換されたメッセージ (名前を含む `HelloRequest` と挨拶メッセージを含む `HelloReply` ) を持つシンプルなサービスインターフェースを定義しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:93
 msgid "Before coding, we need to generate the classes used to implement and consume gRPC services.  In a terminal, run:"
-msgstr ""
+msgstr "コーディングの前に、gRPCサービスを実装して消費するためのクラスを生成する必要があります。ターミナルで以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:97
@@ -172,7 +172,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:100
 msgid "Once generated, you can look at the `target/generated-sources/grpc` directory:"
-msgstr ""
+msgstr "生成されたら、 `target/generated-sources/grpc` ディレクトリーを見てみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:114
@@ -194,12 +194,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:117
 msgid "These are the classes we are going to use."
-msgstr ""
+msgstr "これらは、これから使うクラスファイルです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:119
 msgid "Every time you update the `proto` files, you need to re-generate the classes (using `mvn compile`)."
-msgstr ""
+msgstr "`proto` ファイルを更新するたびに、クラスを再生成する必要があります ( `mvn compile` を使用して)。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:120
@@ -210,7 +210,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:124
 msgid "Protocol Buffers specification provides a way to import `proto` files.  The Quarkus code generation mechanism lets you control the scope of dependencies to scan for possible imports by setting the `quarkus.generate-code.grpc.scan-for-imports` property to one of the following:"
-msgstr ""
+msgstr "Protocol Buffers仕様では、 `proto` ファイルをインポートする方法を提供しています。Quarkusのコード生成メカニズムでは、 `quarkus.generate-code.grpc.scan-for-imports` プロパティーを以下のいずれかに設定することで、インポートの可能性をスキャンするための依存関係の範囲を制御することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:126
@@ -225,12 +225,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:128
 msgid "`groupId1:artifactId1,groupId2:artifactId2` - scan only the dependencies with group id and artifact id in the list."
-msgstr ""
+msgstr "`groupId1:artifactId1,groupId2:artifactId2` - リスト内のグループIDとアーティファクトIDを持つ依存関係のみをスキャンする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:131
 msgid "If not specified, the property is set to `com.google.protobuf:protobuf-java`.  To override it, set the `quarkus.generate-code.grpc.scan-for-imports` property in your pom.xml (or gradle.properties) to the desired value, e.g."
-msgstr ""
+msgstr "指定されていない場合、このプロパティーは `com.google.protobuf:protobuf-java` に設定されます。これを上書きするには、pom.xml (または gradle.properties) の `quarkus.generate-code.grpc.scan-for-imports` プロパティーを希望の値に設定します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:137
@@ -245,33 +245,33 @@ msgstr ""
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:139
 #, no-wrap
 msgid "Implementing a gRPC service"
-msgstr ""
+msgstr "gRPCサービスの実装"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:142
 msgid "Now that we have the generated classes let's implement our _hello_ service."
-msgstr ""
+msgstr "生成されたクラスができたので、 _hello_ サービスを実装してみましょう。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:144
 msgid "With Quarkus, implementing a service requires to _extend_ the generated service base implementation and expose it as a `@Singleton` CDI bean."
-msgstr ""
+msgstr "Quarkusでは、サービスを実装するには、生成されたサービスベースの実装を _extend_ し 、 `@Singleton` CDI Beanとして公開する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:146
 msgid "Don't use `@ApplicationScoped` as the gRPC service implementation cannot be proxied."
-msgstr ""
+msgstr "gRPCサービスの実装はプロキシーできないので、 `@ApplicationScoped` を使用しないでください。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:147
 #, no-wrap
 msgid "Implementing a service"
-msgstr ""
+msgstr "サービスの実装"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:150
 msgid "Create the `src/main/java/org/acme/HelloService.java` file with the following content:"
-msgstr ""
+msgstr "以下の内容の `src/main/java/org/acme/HelloService.java` ファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:154
@@ -323,32 +323,32 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:176
 msgid "Expose your implementation as bean."
-msgstr ""
+msgstr "実装をBeanとして公開します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:177
 msgid "Extends the `ImplBase` class. This is a generated class."
-msgstr ""
+msgstr "`ImplBase` クラスを拡張します。生成されたクラスです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:178
 msgid "Implement the methods defined in the service definition (here we have a single method)."
-msgstr ""
+msgstr "サービス定義で定義されたメソッドを実装します(ここでは1つのメソッドを使用しています)。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:179
 msgid "Build and send the response."
-msgstr ""
+msgstr "レスポンスを構築して送信します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:180
 msgid "Close the response."
-msgstr ""
+msgstr "レスポンスを閉じます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:184
 msgid "Quarkus also provides an additional model with Mutiny, a Reactive Programming API integrated in Quarkus.  Learn more about Mutiny on the link:getting-started-reactive#mutiny[Getting Started with Reactive guide].  A Mutiny implementation of this service would be:"
-msgstr ""
+msgstr "Quarkusは、Quarkusに統合されたReactive Programming APIであるMutinyを使用した追加モデルも提供しています。Mutinyの詳細については、 link:getting-started-reactive#mutiny[Getting Started with Reactiveガイド] を参照してください。このサービスのMutinyの実装は次のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:193
@@ -384,59 +384,59 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:209
 msgid "The main differences are the following:"
-msgstr ""
+msgstr "主な違いは以下の通りです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:211
 msgid "it extends the `ImplBase` from `MutinyGreeterGrpc` instead of `GreeterGrpc`"
-msgstr ""
+msgstr "`GreeterGrpc` の代わりに `MutinyGreeterGrpc` から `ImplBase` を extend します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:212
 msgid "the signature of the method is using Mutiny types"
-msgstr ""
+msgstr "メソッドのシグネチャは Mutiny 型を使用しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:217
 msgid "If your service implementation logic is blocking (use blocking I/O for example), annotate your method with `@Blocking`.  The `io.smallrye.common.annotation.Blocking` annotation instructs the framework to invoke the annotated method on a worker thread instead of the I/O thread (event-loop)."
-msgstr ""
+msgstr "サービスの実装ロジックがブロッキングである (例えば、ブロッキング I/O を使用する) 場合には、メソッドに `@Blocking` をアノテーションします。 `io.smallrye.common.annotation.Blocking` アノテーションは、I/O スレッド (イベントループ) の代わりにワーカースレッドでアノテーションされたメソッドを呼び出すようにフレームワークに指示します。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:218
 #, no-wrap
 msgid "The gRPC server"
-msgstr ""
+msgstr "gRPCサーバー"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:222
 msgid "The services are _served_ by a _server_.  Available services (_CDI beans_) are automatically registered and exposed."
-msgstr ""
+msgstr "サービスは _サーバー_ によって _提供されます_ 。利用可能なサービス( _CDIBean_ )は自動的に登録され、公開されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:224
 msgid "By default, the server is exposed on `localhost:9000`, and uses _plain-text_ (so no TLS)."
-msgstr ""
+msgstr "デフォルトでは、サーバーは `localhost:9000` で公開されており、 _プレーンテキスト_ を使用します(そのため TLS は使用しません)。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:226
 msgid "Run the application using: `mvn quarkus:dev`."
-msgstr ""
+msgstr "`mvn quarkus:dev` を使用してアプリケーションを実行します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:227
 #, no-wrap
 msgid "Consuming a gRPC service"
-msgstr ""
+msgstr "gRPCサービスを消費する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:231
 msgid "In this section, we are going to consume the service we expose.  To simplify, we are going to consume the service from the same application, which in the real world, does not make sense."
-msgstr ""
+msgstr "ここでは、公開しているサービスを消費することにします。簡単に言うと、同じアプリケーションからサービスを消費することになりますが、これは現実の世界では意味がありません。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:233
 msgid "Open the existing `org.acme.ExampleResource` class, and edit the content to become:"
-msgstr ""
+msgstr "既存の `org.acme.ExampleResource` クラスを開き、内容を編集してこのようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:241
@@ -502,22 +502,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:271
 msgid "Inject the service and configure its name. This name is used in the application configuration."
-msgstr ""
+msgstr "サービスをインジェクトし、その名前を設定します。この名前は、アプリケーションの設定で使用されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:272
 msgid "Use the _blocking_ stub (also a generated class)."
-msgstr ""
+msgstr "_ブロッキング_ スタブ(生成されたクラスでもあります)を使用します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:273
 msgid "Invoke the service."
-msgstr ""
+msgstr "サービスを起動します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:276
 msgid "We need to configure the application to indicate where the `hello` service is found.  In the `src/main/resources/application.properties` file, add the following property:"
-msgstr ""
+msgstr "`hello` サービスがどこにあるかを示すようにアプリケーションを構成する必要があります。 `src/main/resources/application.properties` ファイルで、以下のプロパティーを追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:280
@@ -528,44 +528,44 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:283
 msgid "`hello` is the name of the service used in the `@GrpcService` annotation."
-msgstr ""
+msgstr "`hello` は `@GrpcService` アノテーションで使用されるサービスの名前です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:284
 msgid "`host` configures the service host (here it's localhost)."
-msgstr ""
+msgstr "`host` はサービスホストを設定します (ここでは localhost)。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:286
 msgid "Then, open http://localhost:8080/hello/quarkus in a browser, and you should get `Hello quarkus`!"
-msgstr ""
+msgstr "そして、ブラウザで http://localhost:8080/hello/quarkus を開くと、 `Hello quarkus` と表示されるはずです!"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:287
 #, no-wrap
 msgid "Packaging the application"
-msgstr ""
+msgstr "アプリケーションのパッケージング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:291
 msgid "Like any other Quarkus applications, you can package it with: `mvn package`.  You can also package the application into a native executable with: `mvn package -Pnative`."
-msgstr ""
+msgstr "他のQuarkusアプリケーションと同様に、 `mvn package` でパッケージングすることができます。また、 `mvn package -Pnative` でアプリケーションをネイティブの実行ファイルにパッケージングすることもできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:292
 #, no-wrap
 msgid "Generating Java files from proto with protobuf-maven-plugin"
-msgstr ""
+msgstr "protoファイルからprotobuf-maven-pluginでJavaファイルを生成する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:296
 msgid "Alternatively to using Quarkus code generation to generate stubs for `proto` files, you can also use `protobuf-maven-plugin`."
-msgstr ""
+msgstr "Quarkusのコード生成を使用して `proto` ファイルのスタブを生成する代わりに、 `protobuf-maven-plugin` を使うこともできます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:298
 msgid "To do it, first define the 2 following properties in the `<properties>` section:"
-msgstr ""
+msgstr "そのためには、まず `<properties>` セクションで以下の 2 つのプロパティーを定義します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:303
@@ -578,12 +578,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:306
 msgid "They configure the gRPC version and the `protoc` version."
-msgstr ""
+msgstr "これらは gRPC のバージョンと `protoc` のバージョンを設定します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:308
 msgid "Then, add to the `build` section the `os-maven-plugin` extension and the `protobuf-maven-plugin` configuration."
-msgstr ""
+msgstr "そして、 `build` セクションに `os-maven-plugin` のエクステンションと `protobuf-maven-plugin` の設定を追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:319
@@ -653,14 +653,14 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:363
 msgid "The `protobuf-maven-plugin` that generates stub classes from your gRPC service definition (`proto` files)."
-msgstr ""
+msgstr "gRPCサービス定義( `proto` ファイル)からスタブクラスを生成する `protobuf-maven-plugin`"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:365
 msgid "The class generation uses a tool named `protoc`, which is OS-specific.  That's why we use the `os-maven-plugin` to target the executable compatible with the operating system."
-msgstr ""
+msgstr "クラス生成には、OS固有の `protoc` というツールを使用しています。そのため、OSと互換性のある実行ファイルを対象に `os-maven-plugin` を使用しています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-getting-started.adoc:366
 msgid "This configuration instructs the `protobuf-maven-plugin` to generate the default gRPC classes and classes using Mutiny to fit with the Quarkus development experience."
-msgstr ""
+msgstr "この設定は、Quarkusの開発経験に合わせてMutinyを使用してデフォルトのgRPCクラスとクラスを生成するように、 `protobuf-maven-plugin` に指示します。"
