--- a/l10n/po/ja_JP/_versions/1.11/guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/reactive-sql-clients.adoc.po
@@ -592,7 +592,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-sql-clients.adoc:326
 msgid "Build and send the response."
-msgstr ""
+msgstr "レスポンスを構築して送信します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/reactive-sql-clients.adoc:328
