--- a/l10n/po/ja_JP/_versions/1.7/guides/kotlin.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/kotlin.adoc.po
@@ -729,7 +729,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/kotlin.adoc:386
 #, no-wrap
 msgid "Packaging the application"
-msgstr ""
+msgstr "アプリケーションのパッケージング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/kotlin.adoc:389
