Translate: _guides/grpc-service-consumption.adoc.po

--- a/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
@@ -3,69 +3,63 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-05 12:07+0900\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-21 21:57+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/grpc-service-consumption.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Consuming a gRPC Service"
 msgstr "gRPC サービスを消費する"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:11
-#, fuzzy
 msgid "gRPC services can be injected in your application code."
 msgstr "gRPC サービスは、アプリケーションのコードに注入することができます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:14
-#, fuzzy
 msgid "Consuming gRPC services requires the gRPC classes to be generated.  Place your `proto` files in `src/main/proto` and run `mvn compile`."
-msgstr "gRPC サービスを消費するには、gRPC クラスを生成する必要があります。 `proto` ファイルを `src/main/proto` に置き、 `mvn compile` ."
+msgstr "gRPC サービスを消費するには、gRPC クラスを生成する必要があります。 `proto` ファイルを `src/main/proto` に置き、 `mvn compile` を実行してください。"
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:15
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Stubs and Injection"
-msgstr "スタブと注射"
+msgstr "スタブとインジェクション"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:19
-#, fuzzy
 msgid "gRPC generation provides several stubs, providing different way to consume a service.  Quarkus gRPC can inject:"
-msgstr "gRPC生成はいくつかのスタブを提供し、サービスを消費するためのさまざまな方法を提供します。QuarkusのgRPCは注入することができます。"
+msgstr "gRPC生成はいくつかのスタブを提供し、サービスを消費するためのさまざまな方法を提供します。QuarkusのgRPCはインジェクトすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:21
-#, fuzzy
 msgid "blocking stubs"
 msgstr "ブロッキングスタブ"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:22
-#, fuzzy
 msgid "reactive stubs based on Mutiny"
 msgstr "Mutinyをベースにしたリアクティブスタブ"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:24
-#, fuzzy
 msgid "In addition, it also can inject the gRPC `io.grpc.Channel`, that lets you create other types of stubs."
-msgstr "さらに、それはまた、他のタイプのスタブを作成することができますgRPC `io.grpc.Channel` を注入することができます。"
+msgstr "さらに、それはまた、他のタイプのスタブを作成することができますgRPC `io.grpc.Channel` をインジェクトすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:29
@@ -93,7 +87,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:39
-#, fuzzy
 msgid "The stub class names are computed from the service name.  For example, if you use `Greeter` as service name as in:"
 msgstr "スタブクラス名はサービス名から計算されます。例えば、サービス名として `Greeter` とした場合。"
 
@@ -108,27 +101,25 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:49
-#, fuzzy
 msgid "The Mutiny stub name is: `MutinyGreeterGrpc.MutinyGreeterStub` The blocking stub name is: `GreeterGrpc.GreeterBlockingStub`"
-msgstr "Mutinyのスタブ名は `MutinyGreeterGrpc.MutinyGreeterStub` ブロッキングのスタブ名は。 `GreeterGrpc.GreeterBlockingStub`"
+msgstr "Mutinyのスタブ名は `MutinyGreeterGrpc.MutinyGreeterStub` です。ブロッキングのスタブ名は `GreeterGrpc.GreeterBlockingStub` です。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:53
-#, fuzzy
 msgid "Client injection must be qualified using `@GrpcService`.  This annotation indicates the configuration prefix used to configure the service.  For example, if you set it to `hello-service`, configuring the host of the service is done using `hello-service.host`."
 msgstr "クライアントインジェクションは、 `@GrpcService` を使用して修飾する必要があります。このアノテーションは、サービスを構成するために使用する構成プレフィックスを示します。たとえば、 `hello-service` に設定した場合、サービスのホストの構成は `hello-service.host` を使用して行われます。"
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:54
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Examples"
-msgstr "例としては、以下のようなものがあります。"
+msgstr "サンプル"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-consumption.adoc:56
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using a blocking and mutiny stubs"
-msgstr "ブロッキングとミューティニーのスタブを使って"
+msgstr "ブロッキングと Mutiny のスタブを利用"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:62
@@ -163,19 +154,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:78
-#, fuzzy
 msgid "Note that in this example, the `quarkus.grpc.clients.hello.host` property must be set."
 msgstr "この例では、 `quarkus.grpc.clients.hello.host` プロパティーを設定する必要があることに注意してください。"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-consumption.adoc:79
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Handling streams"
 msgstr "ストリームの取り扱い"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:82
-#, fuzzy
 msgid "gRPC allows sending and receiving streams:"
 msgstr "gRPCでは、ストリームの送受信が可能です。"
 
@@ -192,7 +181,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:93
-#, fuzzy
 msgid "Using the Mutiny stub, you can interact with these as follows:"
 msgstr "Mutinyのスタブを使用すると、以下のようにこれらと対話することができます。"
 
@@ -290,43 +278,39 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:148
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Client configuration"
 msgstr "クライアント設定"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:151
-#, fuzzy
 msgid "For each gRPC service you inject in your application, you can configure the following attributes:"
-msgstr "アプリケーションに注入する各gRPCサービスに対して、以下の属性を設定することができます。"
+msgstr "アプリケーションにインジェクトする各gRPCサービスに対して、以下の属性を設定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:155
-#, fuzzy
 msgid "The `service-name` is the name set in the `@GrpcService`."
-msgstr "`service-name` は、 `@GrpcService` ."
+msgstr "`service-name` は、 `@GrpcService` でセットされた名前です。"
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:156
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Example of configuration"
 msgstr "構成例"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:160
-#, fuzzy
 msgid "The 2 following examples uses _hello_ as service name.  Don't forget to replace it with the name you used in in the `@GrpcService` annotation."
 msgstr "以下の2つの例では、サービス名として _hello_ を使用しています。 `@GrpcService` アノテーションで使用した名前に置き換えることを忘れないでください。"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-consumption.adoc:161
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Enabling TLS"
 msgstr "TLSを有効にする"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:166
-#, fuzzy
 msgid "To enable TLS, use the following configuration.  Note that all paths in the configuration may either specify a resource on the classpath (typically from `src/main/resources` or its subfolder) or an external file."
 msgstr "TLS を有効にするには、以下の設定を使用します。構成内のすべてのパスは、クラスパス上のリソース (通常は `src/main/resources` またはそのサブフォルダーから) または外部ファイルのいずれかを指定することに注意してください。"
 
@@ -346,19 +330,17 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:176
-#, fuzzy
 msgid "When SSL/TLS is configured, `plain-text` is automatically disabled."
 msgstr "SSL/TLSを設定すると、 `plain-text` は自動的に無効になります。"
 
 #. type: Title ===
 #: upstream/_guides/grpc-service-consumption.adoc:177
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "TLS with Mutual Auth"
 msgstr "相互認証付きTLS"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:180
-#, fuzzy
 msgid "To use TLS with mutual authentication, use the following configuration:"
 msgstr "相互認証付きのTLSを使用するには、以下の設定を使用します。"
 
@@ -382,13 +364,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/grpc-service-consumption.adoc:192
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Client Interceptors"
 msgstr "クライアントインターセプター"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:195
-#, fuzzy
 msgid "You can implement a gRPC client interceptor by implementing an `@ApplicationScoped` bean implementing `io.grpc.ClientInterceptor`:"
 msgstr "`@ApplicationScoped` `io.grpc.ClientInterceptor` Beanを実装することで、gRPC クライアントのインターセプターを実装することができます。"
 
@@ -414,19 +395,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:210
-#, fuzzy
 msgid "Check the https://grpc.github.io/grpc-java/javadoc/io/grpc/ClientInterceptor.html[ClientInterceptor JavaDoc] to properly implement your interceptor."
 msgstr "link:https://grpc.github.io/grpc-java/javadoc/io/grpc/ClientInterceptor.html[ClientInterceptor JavaDoc] をチェックして、インターセプターを適切に実装してください。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:212
-#, fuzzy
 msgid "When you have multiple client interceptors, you can order them by implementing the `javax.enterprise.inject.spi.Prioritized` interface:"
-msgstr "複数のクライアント・インターセプターがある場合、 `javax.enterprise.inject.spi.Prioritized` インターフェイスを実装することで、それらのインターセプターを注文することができます。"
+msgstr "複数のクライアント・インターセプターがある場合、 `javax.enterprise.inject.spi.Prioritized` インターフェイスを実装することで、それらのインターセプターを指定することができます。"
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:214
-#, fuzzy
 msgid "source, java]"
 msgstr "ソース、java]"
 
@@ -462,6 +440,5 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-service-consumption.adoc:233
-#, fuzzy
 msgid "Interceptors with the highest priority are called first.  The default priority, used if the interceptor does not implement the `Prioritized` interface, is `0`."
-msgstr "最高の優先度を持つインターセプターが最初に呼び出されます。インターセプターが `Prioritized` インターフェイスを実装していない場合に使用されるデフォルトの優先度は `0` ."
+msgstr "最高の優先度を持つインターセプターが最初に呼び出されます。インターセプターが `Prioritized` インターフェイスを実装していない場合に使用されるデフォルトの優先度は `0` です。"
