--- a/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
@@ -65,7 +65,7 @@ msgstr "Mutinyをベースにしたリアクティブスタブ"
 #: upstream/_guides/grpc-service-consumption.adoc:24
 #, fuzzy
 msgid "In addition, it also can inject the gRPC `io.grpc.Channel`, that lets you create other types of stubs."
-msgstr "さらに、それはまた、他のタイプのスタブを作成することができますgRPC `io.grpc.Channel` を注入することができます。"
+msgstr "さらに、それはまた gRPC `io.grpc.Channel` を注入することができ、他のタイプのスタブを作成することを可能にします。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:29
