Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.7/guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/grpc-service-consumption.adoc.po
@@ -296,7 +296,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/grpc-service-consumption.adoc:156
 #, no-wrap
 msgid "Example of configuration"
-msgstr ""
+msgstr "構成例"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-consumption.adoc:160
@@ -325,18 +325,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-consumption.adoc:172
 msgid "When SSL/TLS is configured, `plain-text` is automatically disabled."
-msgstr ""
+msgstr "SSL/TLSを設定すると、 `plain-text` は自動的に無効になります。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/grpc-service-consumption.adoc:173
 #, no-wrap
 msgid "TLS with Mutual Auth"
-msgstr ""
+msgstr "相互認証付きTLS"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-consumption.adoc:176
 msgid "To use TLS with mutual authentication, use the following configuration:"
-msgstr ""
+msgstr "相互認証付きのTLSを使用するには、以下の設定を使用します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/grpc-service-consumption.adoc:184
