--- a/l10n/po/ja_JP/_versions/1.11/guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/grpc-service-consumption.adoc.po
@@ -296,7 +296,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:156
 #, no-wrap
 msgid "Example of configuration"
-msgstr ""
+msgstr "構成例"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:160
@@ -331,18 +331,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:176
 msgid "When SSL/TLS is configured, `plain-text` is automatically disabled."
-msgstr ""
+msgstr "SSL/TLSを設定すると、 `plain-text` は自動的に無効になります。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:177
 #, no-wrap
 msgid "TLS with Mutual Auth"
-msgstr ""
+msgstr "相互認証付きTLS"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:180
 msgid "To use TLS with mutual authentication, use the following configuration:"
-msgstr ""
+msgstr "相互認証付きのTLSを使用するには、以下の設定を使用します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:185
@@ -441,4 +441,4 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:233
 msgid "Interceptors with the highest priority are called first.  The default priority, used if the interceptor does not implement the `Prioritized` interface, is `0`."
-msgstr ""
+msgstr "最高の優先度を持つインターセプターが最初に呼び出されます。インターセプターが `Prioritized` インターフェイスを実装していない場合に使用されるデフォルトの優先度は `0` です。"
