--- a/l10n/po/ja_JP/_versions/1.7/guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/grpc-service-implementation.adoc.po
@@ -23,33 +23,33 @@ msgstr ""
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:6
 #, no-wrap
 msgid "Implementing a gRPC Service"
-msgstr ""
+msgstr "gRPCサービスの実装"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:11
 msgid "gRPC service implementations exposed as beans are automatically registered and served by quarkus-grpc."
-msgstr ""
+msgstr "Beanとして公開されたgRPCサービス実装は、自動的に登録され、quarkus-grpcによって提供されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:14
 msgid "Implementing a gRPC service requires the gRPC classes to be generated.  Place your `proto` files in `src/main/proto` and run `mvn compile`."
-msgstr ""
+msgstr "gRPC サービスを実装するには、gRPC クラスを生成する必要があります。 `proto` ファイルを `src/main/proto` に置き、 `mvn compile` を実行します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:15
 #, no-wrap
 msgid "Implementation base"
-msgstr ""
+msgstr "実装のベース"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:18
 msgid "The generation has created 2 implementation bases:"
-msgstr ""
+msgstr "世相を反映して2つの実装のベースを作成しました。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:20
 msgid "One using the default gRPC API"
-msgstr ""
+msgstr "デフォルトの gRPC API を使用しているもの"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:21
@@ -59,12 +59,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:24
 msgid "The first classname is structured as follows: `${NAME_OF_THE_SERVICE}Grpc.${NAME_OF_THE_SERVICE}ImplBase`.  The second classname is structured as follows: `Mutiny${NAME_OF_THE_SERVICE}Grpc.${NAME_OF_THE_SERVICE}ImplBase`."
-msgstr ""
+msgstr "最初のクラス名は `${NAME_OF_THE_SERVICE}Grpc.${NAME_OF_THE_SERVICE}ImplBase` のように構成されています。 2番目のクラス名は `Mutiny${NAME_OF_THE_SERVICE}Grpc.${NAME_OF_THE_SERVICE}ImplBase` のように構成されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:26
 msgid "For example, if you use `Greeter` as service name as in:"
-msgstr ""
+msgstr "例えば、次のようにサービス名を `Greeter` とした場合"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:32
@@ -78,18 +78,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:36
 msgid "The regular implementation base is: `GreeterGrpc.GreeterImplBase`.  The second implementation base is: `MutinyGreeterGrpc.GreeterImplBase`."
-msgstr ""
+msgstr "通常の実装ベースは `GreeterGrpc.GreeterImplBase` です。第二の実装ベースは `MutinyGreeterGrpc.GreeterImplBase` です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:39
 msgid "Note that these classes are not interfaces but regular classes.  When extending them, you need to override the service methods defined in the service definition."
-msgstr ""
+msgstr "これらのクラスはインターフェイスではなく通常のクラスであることに注意してください。これらのクラスを extend する場合は、サービス定義で定義されているサービスメソッドをオーバーライドする必要があります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:40
 #, no-wrap
 msgid "Implementing a service with the default gRPC API"
-msgstr ""
+msgstr "デフォルトのgRPC APIでサービスを実装する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:45
@@ -166,7 +166,7 @@ msgstr "ストリームの取り扱い"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:89
 msgid "gRPC allows receiving and returning streams:"
-msgstr ""
+msgstr "gRPCでは、ストリームを受信して返すことができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:97
@@ -182,7 +182,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:100
 msgid "Using Mutiny, you can implement these as follows:"
-msgstr ""
+msgstr "Mutinyを使うと、以下のように実装できます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:105
@@ -241,7 +241,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:137
 #, no-wrap
 msgid "Health check"
-msgstr ""
+msgstr "ヘルスチェック"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:139
@@ -302,61 +302,62 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:167
 msgid "Clients can specify the fully qualified service name to get the health status of a specific service or skip specifying the service name to get the general status of the gRPC server."
-msgstr ""
+msgstr "クライアントは、特定のサービスのヘルス状態を取得するために完全修飾されたサービス名を指定したり、gRPCサーバーの一般的な状態を取得するためにサービス名の指定を省略することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:170
 msgid "For more details, check out the https://github.com/grpc/grpc/blob/v1.28.1/doc/health-checking.md[gRPC documentation]"
-msgstr ""
+msgstr "詳細については、 link:https://github.com/grpc/grpc/blob/v1.28.1/doc/health-checking.md[gRPCのドキュメント] を確認してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:173
+#, fuzzy
 msgid "Additionally, if Quarkus SmallRye Health is added to the application, a readiness check for the state of the gRPC services will be added to the MicroProfile Health endpoint response, that is `/health`."
-msgstr ""
+msgstr "さらに、Quarkus SmallRye Healthがアプリケーションに追加された場合、gRPCサービスの状態に関するレディネスチェックがMicroProfile Healthエンドポイントレスポンスに追加されます( `/q/health` )。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:174
 #, no-wrap
 msgid "Reflection Service"
-msgstr ""
+msgstr "リフレクションサービス"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:178
 msgid "Quarkus gRPC Server implements the https://github.com/grpc/grpc/blob/master/doc/server-reflection.md[reflection service].  This service allows tools like https://github.com/fullstorydev/grpcurl[grpcurl] or https://github.com/gusaul/grpcox[grpcox] to interact with your services."
-msgstr ""
+msgstr "Quarkus gRPC Serverは、 link:https://github.com/grpc/grpc/blob/master/doc/server-reflection.md[リフレクションサービス] を実装しています。このサービスを使用すると、 link:https://github.com/fullstorydev/grpcurl[grpcurl] や link:https://github.com/gusaul/grpcox[grpcox] などのツールがサービスと対話できるようになります。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:181
 msgid "The reflection service is enabled by default in _dev_ mode.  In test or production mode, you need to enable it explicitly by setting `quarkus.grpc.server.enable-reflection-service` to `true`."
-msgstr ""
+msgstr "リフレクションサービスは、 _開発_ モードではデフォルトで有効になっています。テストモードやプロダクションモードでは、 `quarkus.grpc.server.enable-reflection-service` を `true` に設定して明示的に有効にする必要があります。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:182
 #, no-wrap
 msgid "Scaling"
-msgstr ""
+msgstr "スケーリング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:184
 msgid "By default, quarkus-grpc starts a single gRPC server running on a single event loop."
-msgstr ""
+msgstr "デフォルトでは、quarkus-grpcは単一のイベントループ上で動作する単一のgRPCサーバーを起動します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:186
 msgid "If you wish to scale your server, you can set the number of server instances by setting `quarkus.grpc.server.instances`."
-msgstr ""
+msgstr "サーバーをスケールさせたい場合は、 `quarkus.grpc.server.instances` を設定することで、サーバーのインスタンス数をセットできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:187
 #, no-wrap
 msgid "Server configuration"
-msgstr ""
+msgstr "サーバーの設定"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:191
 #, no-wrap
 msgid "Example of configuration"
-msgstr ""
+msgstr "構成例"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:193
@@ -380,18 +381,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:204
 msgid "When SSL/TLS is configured, `plain-text` is automatically disabled."
-msgstr ""
+msgstr "SSL/TLSを設定すると、 `plain-text` は自動的に無効になります。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:205
 #, no-wrap
 msgid "TLS with Mutual Auth"
-msgstr ""
+msgstr "相互認証付きTLS"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:208
 msgid "To use TLS with mutual authentication, use the following configuration:"
-msgstr ""
+msgstr "相互認証付きのTLSを使用するには、以下の設定を使用します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/grpc-service-implementation.adoc:216
