Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/grpc-service-consumption.adoc.po
@@ -23,28 +23,28 @@ msgstr ""
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:6
 #, no-wrap
 msgid "Consuming a gRPC Service"
-msgstr ""
+msgstr "gRPC サービスを消費する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:11
 msgid "gRPC services can be injected in your application code."
-msgstr ""
+msgstr "gRPC サービスは、アプリケーションのコードに注入することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:14
 msgid "Consuming gRPC services requires the gRPC classes to be generated.  Place your `proto` files in `src/main/proto` and run `mvn compile`."
-msgstr ""
+msgstr "gRPC サービスを消費するには、gRPC クラスを生成する必要があります。 `proto` ファイルを `src/main/proto` に置き、 `mvn compile` を実行してください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:15
 #, no-wrap
 msgid "Stubs and Injection"
-msgstr ""
+msgstr "スタブとインジェクション"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:19
 msgid "gRPC generation provides several stubs, providing different way to consume a service.  Quarkus gRPC can inject:"
-msgstr ""
+msgstr "gRPC生成はいくつかのスタブを提供し、サービスを消費するためのさまざまな方法を提供します。QuarkusのgRPCはインジェクトすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:21
@@ -54,12 +54,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:22
 msgid "reactive stubs based on Mutiny"
-msgstr ""
+msgstr "Mutinyをベースにしたリアクティブスタブ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:24
 msgid "In addition, it also can inject the gRPC `io.grpc.Channel`, that lets you create other types of stubs."
-msgstr ""
+msgstr "さらに、それはまた gRPC `io.grpc.Channel` を注入することができ、他のタイプのスタブを作成することを可能にします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:29
@@ -88,7 +88,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:39
 msgid "The stub class names are computed from the service name.  For example, if you use `Greeter` as service name as in:"
-msgstr ""
+msgstr "スタブクラス名はサービス名から計算されます。例えば、サービス名として `Greeter` とした場合。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:45
@@ -102,12 +102,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:49
 msgid "The Mutiny stub name is: `MutinyGreeterGrpc.MutinyGreeterStub` The blocking stub name is: `GreeterGrpc.GreeterBlockingStub`"
-msgstr ""
+msgstr "Mutinyのスタブ名は `MutinyGreeterGrpc.MutinyGreeterStub` です。ブロッキングのスタブ名は `GreeterGrpc.GreeterBlockingStub` です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:53
 msgid "Client injection must be qualified using `@GrpcService`.  This annotation indicates the configuration prefix used to configure the service.  For example, if you set it to `hello-service`, configuring the host of the service is done using `hello-service.host`."
-msgstr ""
+msgstr "クライアントインジェクションは、 `@GrpcService` を使用して修飾する必要があります。このアノテーションは、サービスを構成するために使用する構成プレフィックスを示します。たとえば、 `hello-service` に設定した場合、サービスのホストの構成は `hello-service.host` を使用して行われます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:54
@@ -119,7 +119,7 @@ msgstr "サンプル"
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:56
 #, no-wrap
 msgid "Using a blocking and mutiny stubs"
-msgstr ""
+msgstr "ブロッキングと Mutiny のスタブを利用"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:62
@@ -155,7 +155,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:78
 msgid "Note that in this example, the `quarkus.grpc.clients.hello.host` property must be set."
-msgstr ""
+msgstr "この例では、 `quarkus.grpc.clients.hello.host` プロパティーを設定する必要があることに注意してください。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:79
@@ -166,7 +166,7 @@ msgstr "ストリームの取り扱い"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:82
 msgid "gRPC allows sending and receiving streams:"
-msgstr ""
+msgstr "gRPCでは、ストリームの送受信が可能です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:90
@@ -182,7 +182,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:93
 msgid "Using the Mutiny stub, you can interact with these as follows:"
-msgstr ""
+msgstr "Mutinyのスタブを使用すると、以下のようにこれらと対話することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:97
@@ -280,17 +280,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:148
 #, no-wrap
 msgid "Client configuration"
-msgstr ""
+msgstr "クライアント設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:151
 msgid "For each gRPC service you inject in your application, you can configure the following attributes:"
-msgstr ""
+msgstr "アプリケーションにインジェクトする各gRPCサービスに対して、以下の属性を設定することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:155
 msgid "The `service-name` is the name set in the `@GrpcService`."
-msgstr ""
+msgstr "`service-name` は、 `@GrpcService` でセットされた名前です。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:156
@@ -301,7 +301,7 @@ msgstr "構成例"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:160
 msgid "The 2 following examples uses _hello_ as service name.  Don't forget to replace it with the name you used in in the `@GrpcService` annotation."
-msgstr ""
+msgstr "以下の2つの例では、サービス名として _hello_ を使用しています。 `@GrpcService` アノテーションで使用した名前に置き換えることを忘れないでください。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:161
@@ -312,7 +312,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:166
 msgid "To enable TLS, use the following configuration.  Note that all paths in the configuration may either specify a resource on the classpath (typically from `src/main/resources` or its subfolder) or an external file."
-msgstr ""
+msgstr "TLS を有効にするには、以下の設定を使用します。構成内のすべてのパスは、クラスパス上のリソース (通常は `src/main/resources` またはそのサブフォルダーから) または外部ファイルのいずれかを指定することに注意してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:170
@@ -366,12 +366,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:192
 #, no-wrap
 msgid "Client Interceptors"
-msgstr ""
+msgstr "クライアントインターセプター"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:195
 msgid "You can implement a gRPC client interceptor by implementing an `@ApplicationScoped` bean implementing `io.grpc.ClientInterceptor`:"
-msgstr ""
+msgstr "`@ApplicationScoped` `io.grpc.ClientInterceptor` Beanを実装することで、gRPC クライアントのインターセプターを実装することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:200
@@ -396,12 +396,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:210
 msgid "Check the https://grpc.github.io/grpc-java/javadoc/io/grpc/ClientInterceptor.html[ClientInterceptor JavaDoc] to properly implement your interceptor."
-msgstr ""
+msgstr "link:https://grpc.github.io/grpc-java/javadoc/io/grpc/ClientInterceptor.html[ClientInterceptor JavaDoc] をチェックして、インターセプターを適切に実装してください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:212
 msgid "When you have multiple client interceptors, you can order them by implementing the `javax.enterprise.inject.spi.Prioritized` interface:"
-msgstr ""
+msgstr "複数のクライアント・インターセプターがある場合、 `javax.enterprise.inject.spi.Prioritized` インターフェイスを実装することで、それらのインターセプターを指定することができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-consumption.adoc:214
