--- a/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-implementation.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-21 13:17+0000\n"
-"PO-Revision-Date: 2021-03-21 21:48+0900\n"
+"PO-Revision-Date: 2021-03-22 10:55+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -475,7 +475,7 @@ msgstr "複数のサーバーインターセプターがある場合は、 `java
 #. type: Plain text
 #: upstream/_guides/grpc-service-implementation.adoc:258
 msgid "source, java]"
-msgstr "ソース、java]"
+msgstr "source, java]"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-implementation.adoc:261
