Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/grpc-service-implementation.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/grpc-service-implementation.adoc.po
@@ -475,7 +475,7 @@ msgstr "複数のサーバーインターセプターがある場合は、 `java
 #. type: Plain text
 #: upstream/_versions/1.11/guides/grpc-service-implementation.adoc:258
 msgid "source, java]"
-msgstr ""
+msgstr "source, java]"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/grpc-service-implementation.adoc:261
