--- a/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/infinispan-client.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-23 11:07+0000\n"
-"PO-Revision-Date: 2021-03-22 16:02+0900\n"
+"PO-Revision-Date: 2021-03-23 10:14+0900\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,12 +28,12 @@ msgstr "Quarkus - Infinispanクライアント"
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:12
 msgid "Infinispan is an in memory data grid that allows running in a server outside of application processes. This extension provides functionality to allow the client that can connect to said server when running in Quarkus."
-msgstr "Infinispanは、アプリケーションプロセスの外のサーバーでの実行を可能にするインメモリーデータグリッドです。このエクステンションは、Quarkusで実行しているときに、クライアントがサーバーに接続できるようにする機能を提供します。"
+msgstr "Infinispanは、アプリケーションプロセスの外で実行するインメモリデータグリッドです。このエクステンションは、Quarkusを実行しているときに、クライアントがサーバに接続できる機能を提供します。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:15
 msgid "Check out the https://infinispan.org/documentation[Infinispan documentation] to find out more about the Infinispan project, in particular the https://infinispan.org/docs/stable/titles/hotrod_java/hotrod_java.html[Hot Rod Java client guide]."
-msgstr "Infinispanの link:https://infinispan.org/documentation[ドキュメントを] チェックして、Infinispanプロジェクト、特に link:https://infinispan.org/docs/stable/titles/hotrod_java/hotrod_java.html[Hot Rod Javaクライアントガイド] の詳細を確認してください。"
+msgstr "Infinispanの link:https://infinispan.org/documentation[ドキュメント] をチェックして、Infinispanプロジェクト、特に link:https://infinispan.org/docs/stable/titles/hotrod_java/hotrod_java.html[Hot Rod Javaクライアントガイド] の詳細を確認してください。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:16
@@ -44,7 +44,7 @@ msgstr "設定"
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:20
 msgid "Once you have your Quarkus project configured you can add the `infinispan-client` extension to your project by running the following from the command line in your project base directory."
-msgstr "一度Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリーのコマンドラインから以下を実行して、 `infinispan-client` エクステンションをプロジェクトに追加できます。"
+msgstr "一度Quarkusプロジェクトを設定したら、プロジェクトのベースディレクトリのコマンドラインから以下を実行して、 `infinispan-client` エクステンションをプロジェクトに追加できます。"
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-client.adoc:24
@@ -70,12 +70,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:39
 msgid "The Infinispan client is configurable in the `application.properties` file that can be provided in the `src/main/resources` directory. These are the properties that can be configured in this file:"
-msgstr "Infinispan クライアントは、 `src/main/resources` ディレクトリーで提供される `application.properties` ファイルで設定できます。このファイルで設定できるプロパティーは以下の通りです。"
+msgstr "Infinispan クライアントは、 `src/main/resources` ディレクトリで提供される `application.properties` ファイルで設定できます。このファイルで設定できるプロパティは以下の通りです。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:45
 msgid "It is also possible to configure a `hotrod-client.properties` as described in the Infinispan user guide. Note that the `hotrod-client.properties` values overwrite any matching property from the other configuration values (eg. near cache).  This properties file is build time only and if it is changed, requires a full rebuild."
-msgstr "Infinispan ユーザーガイドに記載されているように `hotrod-client.properties` を設定できます。 `hotrod-client.properties` の値は、他の設定値(例:ニアキャッシュ)から一致するプロパティーを上書きすることに注意してください。このプロパティーファイルはビルド時のみのもので、変更された場合は完全に再ビルドする必要があります。"
+msgstr "Infinispan ユーザガイドに記載されているように `hotrod-client.properties` を設定できます。 `hotrod-client.properties` の値は、他の設定値（例:ニアキャッシュ）から一致するプロパティを上書きすることに注意してください。このプロパティファイルはビルド時のみのもので、変更された場合は完全に再ビルドする必要があります。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:46
@@ -86,7 +86,7 @@ msgstr "シリアライゼーション（Key Value型のサポート）"
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:51
 msgid "By default the client will support keys and values of the following types: byte[], primitive wrappers (eg. Integer, Long, Double etc.), String, Date and Instant. User types require some additional steps that are detailed here. Let's say we have the following user classes:"
-msgstr "デフォルトでは、クライアントは以下の型のキーと値をサポートします: byte[]、プリミティブラッパー(例: Integer、Long、Doubleなど)、String、Date、Instant。ユーザー型については、ここで詳しく説明している追加のステップが必要です。以下のようなユーザクラスがあるとします。"
+msgstr "デフォルトでは、クライアントは以下の型のキーとバリューをサポートします: byte[]、プリミティブラッパー(例: Integer、Long、Doubleなど)、String、Date、Instant。ユーザ型については、ここで詳しく説明される追加のステップが必要です。以下のようなユーザクラスがあるとします。"
 
 #. type: Block title
 #: upstream/_guides/infinispan-client.adoc:52
@@ -115,6 +115,12 @@ msgid ""
 "   // Getter/Setter/equals/hashCode/toString omitted\n"
 "}\n"
 msgstr ""
+"   public Author(String name, String surname) {\n"
+"      this.name = Objects.requireNonNull(name);\n"
+"      this.surname = Objects.requireNonNull(surname);\n"
+"   }\n"
+"   // Getter/Setter/equals/hashCode/toString は省略\n"
+"}\n"
 
 #. type: Block title
 #: upstream/_guides/infinispan-client.adoc:67
@@ -149,11 +155,20 @@ msgid ""
 "   // Getter/Setter/equals/hashCode/toString omitted\n"
 "}\n"
 msgstr ""
+"   public Book(String title, String description, int publicationYear, Set<Author> authors, BigDecimal price) {\n"
+"      this.title = Objects.requireNonNull(title);\n"
+"      this.description = Objects.requireNonNull(description);\n"
+"      this.publicationYear = publicationYear;\n"
+"      this.authors = Objects.requireNonNull(authors);\n"
+"      this.price = price;\n"
+"   }\n"
+"   // Getter/Setter/equals/hashCode/toString は省略\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:89
 msgid "Serialization of user types uses a library based on protobuf, called Protostream."
-msgstr "ユーザータイプのシリアライズは、Protostreamと呼ばれるprotobufをベースにしたライブラリを使用します。"
+msgstr "ユーザ型のシリアライズは、Protostreamと呼ばれるprotobufをベースにしたライブラリを使用します。"
 
 #. type: Title ===
 #: upstream/_guides/infinispan-client.adoc:90
@@ -164,12 +179,12 @@ msgstr "アノテーションに基づくシリアライゼーション"
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:95
 msgid "This can be done automatically by adding protostream annotations to your user classes.  In addition a single Initializer annotated interface is required which controls how the supporting classes are generated."
-msgstr "これは、ユーザークラスに protostream アノテーションを追加することで自動的に行えます。さらに、サポートするクラスがどのように生成されるかを制御するために、アノテーションされたインターフェイスの単一の初期化子が必要です。"
+msgstr "これは、ユーザクラスに protostream アノテーションを追加することで自動的に行えます。さらに、初期化子がアノテーションされたインターフェースが1つ必要です。これは、サポートするクラスの生成方法を制御します。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:97
 msgid "Here is an example of how the preceding classes should be changed:"
-msgstr "ここでは、先行するクラスをどのように変更するかの例を示します。"
+msgstr "ここでは、先述のクラスをどのように変更するかの例を示します。"
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-client.adoc:106
@@ -323,12 +338,12 @@ msgstr "Quarkusでは、 `schemaFileName` と `schemaFilePath` 属性は、 `Aut
 #: upstream/_guides/infinispan-client.adoc:187
 #, no-wrap
 msgid "User written serialization"
-msgstr "ユーザーが書いたシリアライゼーション"
+msgstr "ユーザが書いたシリアライゼーション"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:193
 msgid "The previous method is suggested for any case when the user can annotate their classes.  Unfortunately the user may not be able to annotate all classes they will put in the cache. In this case you must define your schema and create your own Marshaller(s)  yourself."
-msgstr "前の方法は、ユーザが自分のクラスにアノテーションを付けられる場合のために提案されています。残念ながら、ユーザーはキャッシュに入れるすべてのクラスにアノテーションを付けることができないかもしれません。このような場合はスキーマを定義し、自分で独自のマーシャラを作成しなければなりません。"
+msgstr "前の方法は、ユーザが自分のクラスにアノテーションを付けられる場合のために提案されています。残念ながら、ユーザはキャッシュに入れるすべてのクラスにアノテーションを付けることができないかもしれません。このような場合はスキーマを定義し、自分で独自のマーシャラを作成しなければなりません。"
 
 #. type: Labeled list
 #: upstream/_guides/infinispan-client.adoc:194
@@ -388,14 +403,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:218
-#, fuzzy
 msgid "In Code"
-msgstr "コードでは"
+msgstr "コード"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:221
 msgid "+ Or you can define the proto schema directly in user code by defining a produced bean of type `org.infinispan.protostream.FileDescriptorSource`."
-msgstr "+ `org.infinispan.protostream.FileDescriptorSource` 型の生成されたBeanを定義することにより、ユーザーコードで直接protoスキーマを定義できます。"
+msgstr "+ `org.infinispan.protostream.FileDescriptorSource` 型の生成されたBeanを定義することにより、ユーザコードで直接protoスキーマを定義できます。"
 
 #. type: delimited block -
 #: upstream/_guides/infinispan-client.adoc:243
@@ -426,12 +440,12 @@ msgstr ""
 #: upstream/_guides/infinispan-client.adoc:244
 #, no-wrap
 msgid "User Marshaller"
-msgstr "ユーザーマーシャラ"
+msgstr "ユーザマーシャラ"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:248
 msgid "The last thing to do is to provide a `org.infinispan.protostream.MessageMarshaller` implementation for each user class defined in the proto schema. This class is then provided via `@Produces` in a similar fashion to the code based proto schema definition above."
-msgstr "最後にすべきことは、proto スキーマで定義された各ユーザークラスの `org.infinispan.protostream.MessageMarshaller` 実装を提供することです。このクラスは、上記のコードベースの proto スキーマの定義と同様の方法で `@Produces` を介して提供されます。"
+msgstr "最後にすべきことは、proto スキーマで定義された各ユーザクラスの `org.infinispan.protostream.MessageMarshaller` 実装を提供することです。このクラスは、上記のコードベースの proto スキーマの定義と同様の方法で `@Produces` を介して提供されます。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:250
@@ -600,12 +614,12 @@ msgstr "依存性注入"
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:341
 msgid "As you saw above we support the user injecting Marshaller configuration. You can do the inverse with the Infinispan client extension providing injection for `RemoteCacheManager` and `RemoteCache` objects.  There is one global `RemoteCacheManager` that takes all of the configuration parameters setup in the above sections."
-msgstr "上で見たように、Marshaller の設定をユーザがインジェクションすることをサポートしています。Infinispan クライアントエクステンションを使用すると、 `RemoteCacheManager` と `RemoteCache` オブジェクトにインジェクションを行うことでその逆のことができます。上記のセクションで設定したすべての設定パラメーターを受け取るグローバル `RemoteCacheManager` があります。"
+msgstr "上で見たように、Marshaller の設定をユーザが注入することをサポートしています。Infinispan クライアントエクステンションを使用すると、 `RemoteCacheManager` と `RemoteCache` オブジェクトに注入することでその逆のことができます。上記のセクションで設定したすべての設定パラメーターを受け取るグローバル `RemoteCacheManager` があります。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:344
 msgid "It is very simple to inject these components. All you need to do is to add the Inject annotation to the field, constructor or method. In the below code we utilize field and constructor injection."
-msgstr "これらのコンポーネントを注入するのは非常に簡単です。必要なのは、フィールド、コンストラクタ、またはメソッドにインジェクションアノテーションを追加するだけです。以下のコードでは、フィールドとコンストラクタのインジェクションを利用しています。"
+msgstr "これらのコンポーネントを注入するのは非常に簡単です。必要なのは、フィールド、コンストラクタ、またはメソッドに注入アノテーションを追加するだけです。以下のコードでは、フィールドとコンストラクタの注入を利用しています。"
 
 #. type: Block title
 #: upstream/_guides/infinispan-client.adoc:345
@@ -655,7 +669,7 @@ msgstr "問い合わせ"
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:369
 msgid "The Infinispan client supports both indexed and non indexed querying as long as the `ProtoStreamMarshaller` is configured above. This allows the user to query based on the properties of the proto schema."
-msgstr "Infinispan クライアントは、上記の `ProtoStreamMarshaller` が設定されている限り、インデックス付きと非インデックス付きの両方のクエリをサポートしています。これにより、ユーザーはプロトスキーマのプロパティに基づいてクエリを行えます。"
+msgstr "Infinispan クライアントは、上記の `ProtoStreamMarshaller` が設定されている限り、インデックス付きと非インデックス付きの両方の問い合せをサポートしています。これにより、ユーザはプロトスキーマのプロパティに基づいて問い合せできます。"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:374
@@ -710,7 +724,7 @@ msgstr "ニアキャッシング"
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:403
 msgid "Near caching is disabled by default, but you can enable it by setting the profile config property `quarkus.infinispan-client.near-cache-max-entries` to a value greater than 0. You can also configure a regular expression so that only a subset of caches have near caching applied through the `quarkus.infinispan-client.near-cache-name-pattern` attribute."
-msgstr "ニア・キャッシングは既定では無効になっていますが、プロファイル構成プロパティ `quarkus.infinispan-client.near-cache-max-entries` を 0 より大きい値に設定することで有効にできます。 また、正規表現を構成して、`quarkus.infinispan-client.near-cache-name-pattern` 属性を通じたキャッシュのサブセットのみニア・キャッシングを適用できます。"
+msgstr "ニア・キャッシングは既定では無効になっていますが、プロファイル構成プロパティ `quarkus.infinispan-client.near-cache-max-entries` を 0 より大きい値に設定することで有効にできます。 また、正規表現を構成して、`quarkus.infinispan-client.near-cache-name-pattern` 属性を通じたキャッシュの一部のみニア・キャッシングを適用できます。"
 
 #. type: Title ==
 #: upstream/_guides/infinispan-client.adoc:404
@@ -742,7 +756,7 @@ msgstr "認証"
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:418
 msgid "This chart illustrates what mechanisms have been verified to be working properly with the Quarkus Infinispan Client extension."
-msgstr "この図は、Quarkus Infinispanクライアントエクステンションで正常に動作することが確認されているメカニズムを示しています。"
+msgstr "この表は、Quarkus Infinispanクライアントエクステンションで正常に動作することが確認されているメカニズムを示しています。"
 
 #. type: Block title
 #: upstream/_guides/infinispan-client.adoc:419
@@ -820,6 +834,5 @@ msgstr "追加機能"
 
 #. type: Plain text
 #: upstream/_guides/infinispan-client.adoc:447
-#, fuzzy
 msgid "The Infinispan Client has additional features that were not mentioned here. This means this feature was not tested in a Quarkus environment and they may or may not work. Please let us know if you need these added!"
-msgstr "Infinispanクライアントには、ここでは触れられていない追加機能があります。これは、この機能がQuarkus環境でテストされていないことを意味します。これらの機能を追加する必要がある場合は、ご連絡ください。"
+msgstr "Infinispanクライアントには、ここでは触れられていない追加機能があります。これは、この機能がQuarkus環境でテストされていないことを意味し、それらは動作するかもしれないし、動作しないかもしれません。これらの機能を追加する必要がある場合は、ご連絡ください。"
